Improved the styling of the top branding and added links to the API Query Builder

--- a/src/openclimategis/api/templates/base_api.html
+++ b/src/openclimategis/api/templates/base_api.html
@@ -50,6 +50,11 @@
             </div>
         </div>
     </div>
-    <div id="branding"><a href="/">OpenClimateGIS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div>
+    <div id="branding">
+        <div class="wrapper">
+            <a id="brand" href="/">OpenClimateGIS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <div id="builder"><a href="/builder/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;API Query Builder</a></div>
+        </div>
+    </div>
 </body>
 </html>
