--- a/src/openclimategis/climatedata/templates/base.html
+++ b/src/openclimategis/climatedata/templates/base.html
@@ -43,12 +43,18 @@
                     <div class="attribute">
                         <ul class="flush">
                             <li><a href="{% url aoi_upload_form %}">AOI Uploader</a></li>
+                            <li><a href="{% url aoi_upload_form %}">Query Builder</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="branding"><a href="/">OpenClimateGIS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div>
+    <div id="branding">
+        <div class="wrapper">
+            <a id="brand" href="/">OpenClimateGIS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <div id="builder"><a href="/builder/">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;API Query Builder</a></div>
+        </div>
+    </div>
 </body>
 </html>
