--- a/src/openclimategis/media/css/base.css
+++ b/src/openclimategis/media/css/base.css
@@ -119,11 +119,19 @@ td {vertical-align:top;height:30px;}
 #breadcrumbs a:visited {color:#003366;text-decoration:none;border-top:3px solid #003366;}
 #breadcrumbs a:hover,
 #breadcrumbs a:active {color:#730D00;border-color:#730D00;border-bottom:3px solid #730D00;}
-#branding {float:left;height:50px;position:fixed;top:0;left:0;padding:0 20px;background:none;font-family:CabinMediumItalic,sans-serif;font-size:18px;line-height:50px;}
+#branding {width:100%;height:50px;position:fixed;top:0;left:0;background:none;line-height:50px;}
 #branding a:link,
 #branding a:visited {color:#CCC;text-decoration:none;border:none;}
 #branding a:hover,
-#branding a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/globe_icon.png) no-repeat right top;}
+#branding a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/globe_icon.png) no-repeat right center;}
+#branding #brand {float:left;font-size:24px;}
+#branding .wrapper {width:900px;margin:0 auto;font-family:CabinMediumItalic,sans-serif;}
+#branding #builder {float:right;color:#FFF;font-size:18px;}
+#branding #builder a:link,
+#branding #builder a:visited {color:#CCC;text-decoration:none;border:none;}
+#branding #builder a:hover,
+#branding #builder a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/builder_emblem.png) no-repeat left center;}
+#branding #builder .icon {vertical-align:middle;margin-right:7px;position:relative;top:-2px;}
 #container {float:left;width:900px;padding-bottom:50px;}
 #content {width:730px;margin:0;padding:0;margin-left:170px;}
 #content a:link,
