--- a/src/openclimategis/media/css/base.ie.css
+++ b/src/openclimategis/media/css/base.ie.css
@@ -115,11 +115,14 @@ td {vertical-align:top;height:30px;}
 #breadcrumbs a:visited {color:#003366;text-decoration:none;border-top:3px solid #003366;}
 #breadcrumbs a:hover,
 #breadcrumbs a:active {color:#730D00;border-color:#730D00;border-bottom:3px solid #730D00;}
-#branding {float:left;height:50px;position:absolute;top:0;left:0;padding:0 20px;background:none;font-family:CabinMediumItalic,sans-serif;font-size:18px;line-height:50px;}
+#branding {width:100%;height:50px;position:absolute;top:0;left:0;background:none;text-align:center;}
 #branding a:link,
 #branding a:visited {color:#CCC;text-decoration:none;border:none;}
 #branding a:hover,
-#branding a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/globe_icon.png) no-repeat right top;}
+#branding a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/globe_icon.png) no-repeat right center;}
+#branding #brand {float:left;font-family:CabinMediumItalic,sans-serif;font-size:24px;line-height:50px;}
+#branding .wrapper {width:900px;margin:0 auto;text-align:left;line-height:50px;}
+#branding #builder {display:none;}
 #container {float:left;width:900px;margin-top:70px;padding-bottom:50px;}
 #content {width:730px;margin:0;padding:0;margin-left:170px;}
 #content a:link,
