--- a/src/openclimategis/api/templates/base_api.html
+++ b/src/openclimategis/api/templates/base_api.html
@@ -44,6 +44,7 @@
                     <div class="attribute">
                         <ul class="flush">
                             <li><a href="{% url aoi_upload_form %}">Area-of-Interest Uploader</a></li>
+                            <li><a href="{% url query_builder %}">Query Builder</a></li>
                         </ul>
                     </div>
                 </div>
