--- a/src/openclimategis/climatedata/templates/base.html
+++ b/src/openclimategis/climatedata/templates/base.html
@@ -42,8 +42,8 @@
                     <span class="header">Tools</span>
                     <div class="attribute">
                         <ul class="flush">
-                            <li><a href="{% url aoi_upload_form %}">AOI Uploader</a></li>
-                            <li><a href="{% url aoi_upload_form %}">Query Builder</a></li>
+                            <li><a href="{% url aoi_upload_form %}">Area-of-Interest Uploader</a></li>
+                            <li><a href="{% url query_builder %}">Query Builder</a></li>
                         </ul>
                     </div>
                 </div>
