--- a/src/openclimategis/api/templates/Archive.html
+++ b/src/openclimategis/api/templates/Archive.html
@@ -15,7 +15,7 @@
 {% block content %}
   {% if is_collection %}
     {% comment %}Create table for a list of archives{% endcomment %}
-    <table frame=void rules=all>
+    <table frame=void rules=void>
       <tbody>
         <tr>
             <th>Code</th>
@@ -24,7 +24,7 @@
             <th>URL</th>
         </tr>
         {% for listitem in data|dictsort:"code" %}
-        <tr>
+        <tr class="{% cycle 'row-cls1' 'row-cls2' %}">
             <td><a href="{% url archive_single urlslug=listitem.urlslug emitter_format='html' %}">{{ listitem.code }}</a></td>
             <td>{{ listitem.name }}</td>
             <td>{{ listitem.urlslug }}</td>
