--- a/src/openclimategis/api/templates/ClimateModel.html
+++ b/src/openclimategis/api/templates/ClimateModel.html
@@ -15,7 +15,7 @@
 {% block content %}
     {% if is_collection %}
       {% comment %}Create table for a list of Climate Models{% endcomment %}
-      <table frame=void rules=all>
+      <table frame=void rules=void>
       <tbody>
         <tr>
             <th>Code</th>
@@ -23,7 +23,7 @@
             <th>Organization</th>
         </tr>
         {% for listitem in data|dictsort:"code" %}
-        <tr>
+        <tr class="{% cycle 'row-cls1' 'row-cls2' %}">
             <td><a href="{% url climatemodel_single urlslug=listitem.urlslug emitter_format='html' %}">{{ listitem.code }}</a></td>
             <td>{{ listitem.name }}</td>
             <td>{{ listitem.organization.name }}</td>
