--- a/src/openclimategis/api/templates/Scenario.html
+++ b/src/openclimategis/api/templates/Scenario.html
@@ -16,14 +16,14 @@
 
     {% if is_collection %}
         {% comment %}Create table for a list of emissions scenarios{% endcomment %}
-      <table frame=void rules=all>
+      <table frame=void rules=void>
       <tbody>
         <tr>
             <th>Code</th>
             <th>Model Name</th>
         </tr>
         {% for listitem in data|dictsort:"code" %}
-        <tr>
+        <tr class="{% cycle 'row-cls1' 'row-cls2' %}">
             <td><a href="{% url scenario_single urlslug=listitem.urlslug emitter_format='html' %}">{{ listitem.code }}</a></td>
             <td>{{ listitem.name }}</td>
         </td></tr>
