--- a/src/openclimategis/api/templates/Variable.html
+++ b/src/openclimategis/api/templates/Variable.html
@@ -14,7 +14,7 @@
 
 {% block content %}
   {% if is_collection %}
-    <table frame=void rules=all>
+    <table frame=void rules=void>
     <tbody>
         {% comment %}Create table for a list of climate variables{% endcomment %}
         <tr>
@@ -24,7 +24,7 @@
             <th>Dimensions</th>
         </tr>
         {% for listitem in data|dictsort:"code" %}
-        <tr>
+        <tr class="{% cycle 'row-cls1' 'row-cls2' %}">
             <td><a href="{% url variable_single urlslug=listitem.urlslug emitter_format='html' %}">{{ listitem.code }}</a></td>
             <td>{{ listitem.name }}</td>
             <td>{{ listitem.units }}</td>
