--- a/src/openclimategis/media/css/base.css
+++ b/src/openclimategis/media/css/base.css
@@ -81,7 +81,7 @@
     font-style: normal;
     }
 
-body {margin:0;padding:0;background:#999 url(/media/img/backing.png) fixed repeat-x left top;font-family:Arial,sans-serif;font-size:16px;}
+body {margin:0;padding:0;background:#FFF url(/media/img/backing.png) fixed repeat-x left top;font-family:Arial,sans-serif;font-size:16px;}
 a:link,
 a:visited {color:#003366;text-decoration:none;border:none;}
 a:hover,
@@ -91,15 +91,15 @@ ul {line-height:28px;margin:10px 0 0 0;padding:0 0 0 20px;font-size:18px;list-st
 
 label {font-weight:bold;padding-right:10px;}
 
-table {width:900px;margin:20px 0 0;border:none;border-color:#666;font-size:12px;text-align:left;}
+table {width:900px;margin:20px 0 0;border:none;font-size:12px;text-align:left;}
 table a:link,
 table a:visited {border:none;text-decoration:underline;}
 table a:hover,
 table a:active {border:none;text-decoration:underline;}
-th {vertical-align:top;height:30px;font-size:14px;font-weight:bold;}
+th {vertical-align:middle;height:30px;font-size:14px;font-weight:bold;border-bottom:1px solid #CCC;}
 th,
 td {padding:5px 5px;}
-td {vertical-align:top;height:30px;}
+td {vertical-align:middle;height:30px;}
 
 #canvas {width:100%;height:100%;margin:0 auto;background:none;
 /*  background: -webkit-gradient(linear, 0 50, 0 450, from(#FFF), to(#999));
@@ -126,9 +126,9 @@ td {vertical-align:top;height:30px;}
 #branding a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/globe_icon.png) no-repeat right center;}
 #branding #brand {float:left;font-size:24px;}
 #branding .wrapper {width:900px;margin:0 auto;font-family:CabinMediumItalic,sans-serif;}
-#branding #builder {float:right;color:#FFF;font-size:18px;}
+#branding #builder {float:right;color:#FFF;font-size:18px;font-family:CabinMedium,sans-serif;}
 #branding #builder a:link,
-#branding #builder a:visited {color:#CCC;text-decoration:none;border:none;}
+#branding #builder a:visited {color:#999;text-decoration:none;border:none;}
 #branding #builder a:hover,
 #branding #builder a:active {color:#FFF;text-decoration:none;border:none;background:url(/media/img/builder_emblem.png) no-repeat left center;}
 #branding #builder .icon {vertical-align:middle;margin-right:7px;position:relative;top:-2px;}
@@ -176,6 +176,8 @@ td {vertical-align:top;height:30px;}
 .quote .author {color:#666;font-size:28px;}
 .quotemark {}
 .errorlist {color:#FF0000;font-size:14px;}
+.row-cls1 {background:#FFF;}
+.row-cls2 {background:#EEE;}
 
 /*
 #sidebar {float:left;width:260px;height:100%;position:fixed;margin-top:270px;border-right:20px solid #730D00;}
